# FPL-scraping

./: Cargo.toml  index.html  player_data.xlsx  test1.xlsx  test2.xlsx
src/: league.rs  main.rs
src/data/: mod.rs  playerdata.rs
src/league/: league.rs  leaguedata.rs  mod.rs
src/player/: mod.rs  player.rs
